k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-minikube-app
  labels:
    app: devops-minikube-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-minikube-app
  template:
    metadata:
      labels:
        app: devops-minikube-app
    spec:
      containers:
        - name: devops-minikube-app
          image: devops-minikube-app:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
